css/main.css
header, nav, aside, article, footer, section, main, figure, figcaption {
	display:block;
}
* {
 	margin:0;
	border:0;
	padding:0;
}

header {
    text-align: center;
    padding: 0 6% 8% 6%;
    margin: 0 0 8% 0;
    background-image: url('../images/hero-home.jpg');
    background-size: contain;
}

.header-about {
    text-align: center;
    padding: 0 6% 8% 6%;
    margin: 0 0 8% 0;
    background-image: url('../images/hero-about.jpg');
    background-size: contain;
}

.header-visit {
    text-align: center;
    padding: 0 6% 8% 6%;
    margin: 0 0 8% 0;
    background-image: url('../images/hero-visit.jpg');
    background-size: cover;
}

nav ul {
    padding: 8% 0 6% 0;
}

nav ul li {
    display: inline;
    font-family: 'Arimo', sans-serif;
    font-size: 1em;
    padding: 0 4%;
}

nav ul li a {
    text-decoration: none;
    color: white;
}

.active-nav {
    border-bottom: 3px solid #EF3E42;
}

.active-nav:hover {
    border-bottom: 3px solid #005A9C;
}

header h1 {
    font-family: 'Arimo', sans-serif;
    font-size: 1.5em;
    color: white;
    padding: 2% 0 4% 0;
}

header p {
    font-family: 'Arimo', sans-serif;
    font-size: 1em;
    color: white;
    padding: 0 0 10% 0;
}

#text-window {
    position: absolute;
    top: 20%;
    left: 13%;
    width: 70%;
    font-family: 'Arimo', sans-serif;
    color: white;
    padding: 4% 2% 4% 2%;
    z-index: 1000;
    text-align: center;
    background-color: #005A9C;
    border: 1px solid white;
}

#text-window h2 {
    padding: 0 0 2% 0;
}

#overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: black;
    opacity: 70%;
    z-index: 900
}

#text-window button {
    margin: 6% 0;
    font-family: 'Arimo', sans-serif;
    font-size: .8em;
    color: #005A9C;
    border: 1px solid white;
    background-color: white;
    padding: 2% 8%;
}

#text-window button:hover {
    color: #EF3E42;
}

header button {
    margin: 0 0 4% 0;
    font-family: 'Arimo', sans-serif;
    font-size: 1em;
    color: white;
    border: 1px solid white;
    background-color: #005A9C;
    padding: 2% 8%;
}

section article {
    font-family: 'Arimo', sans-serif;
    font-size: 1em;
    color: #6D6E71;
    padding: 0 6%;
}

.hours-list {
    font-family: 'Arimo', sans-serif;
    font-size: 1em;
    color: #6D6E71;
    padding: 2% 0;
}

.hours-list p {
    padding: 1% 0;
}

.hours-menu {
    padding: 2% 0 0 0;
}

.hours-menu p {
    font-family: 'Arimo', sans-serif;
    font-size: 1em;
    color: #6D6E71;
}



/* Accordian CSS */
.hours-menu {
    float:left;
    display:block;
    width:100%;
    box-sizing: border-box;
    font-family:'Open-sans',Arial,sans-serif;
}
.hours-menu-heading {
    cursor:pointer;
    margin: 4% 0 0 0;
    background-color:#005A9C;
}

.close .hours-list {
    height:0px;
    transition:height 1s ease-out;
	transform: scaleY(0);
    float:left;
    display:block;    
}

.open .hours-list {
    padding: 5%;
    background-color: #fff;
    border: 1px solid #BFC0BF;
    width: 100%;
    display:block;
	transform: scaleY(1);
	transform-origin: top;
	transition: transform 0.4s ease;
        box-sizing: border-box;
}

.open .hours-menu-heading {
    background-color: #BFC0BF;;
    color: #005A9C;
}

#day-of-week {
    color: #EF3E42;
}
/* -------------------------------- */


.about-image img {
    width: 100%;
    padding: 5% 0 5% 0;
} 

.map img {
    display: block;
    width: 88%;
    padding: 5% 0;
    margin: 0 auto;
}

section article h2 {
    font-family: 'Arimo', sans-serif;
    color: #005A9C;
    padding: 0 0 2% 0;
}

.hours-menu h2 {
    font-family: 'Arimo', sans-serif;
    color: white;
    padding: 3% 0 3% 2%;
}

section article p {
    padding: 0 0 2% 0;
}

.hours-menu {
    padding: 0 6%;
}

.read-more {
    font-weight: bolder;
    color: #005A9C; 
}

.hide {
    display: none;
}

.show {
    display: block;
}

.mobile-display {
    display: flex;
    padding: 4% 4%;
}

.mobile-display img {
    width: 27%;
    margin: auto;
}

.desktop-display {
    display: none;
}

footer {
    background-color: #005A9C;
    bottom: 0;
    width: 100%;
    margin: 8% 0 0 0;
}

footer h3 {
    text-align: center;
    padding: 4% 0 1% 0;
}

footer h3 a {
    color: white;
    font-family: 'Arimo', sans-serif;
    font-size: 1em;
    text-decoration: none;
}
 
.social-icons {
    width: 25%;
    margin: auto;    
    padding: 4% 0 4% 0;
}

.social-icons img {
    width: 45%;
}

@media (min-width: 450px) {
    .social-icons {
        width: 25%;
        margin: auto;    
        padding: 1% 0 2% 0;
    }
    
    .social-icons img {
        width: 30%;
    }
}

@media (min-width: 610px) {
    header {
        text-align: center;
        padding: 0 6% 6% 6%;
        margin: 0 0 5% 0;
    }
    
    nav ul {
        padding: 8% 0 6% 0;
    }
    
    nav ul li {
        font-size: 1.2em;
        padding: 0 4%;
    }
    
    nav ul li a {
        text-decoration: none;
        color: white;
    }
    
    header h1 {
        font-size: 1.8em;
        padding: 2% 0 4% 0;
    }
    
    header p {
        font-size: 1.3em;
        padding: 0 0 7% 0;
    }

    header button {
        font-size: 1.2em;
    }

    #text-window button {
        font-size: 1.1em;
    }

    section article h2 {
        font-size: 1.7em; 
    }

    section article p {
        font-size: 1.15em; 
    }

    .hours-list p {
        font-size: 1.15em;
    }
}

